# AILR-AI-assisted-literature-review-pipeline

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: ai-extraction.md  concepts.md  extraction-engine.md  getting-started.md  index.md  internals.md  myst.yml  team.md
docs/workflow/: abstract-screening.md  extraction.md  full-text.md  import.md  reports.md
examples/: README.md  inclusion_criteria.md
examples/prompts/: extraction.txt  screening.txt
src/ailr/: __init__.py  cli.py  core_schema.yaml  criteria.py  exceptions.py  extraction.py  metrics.py  preprocess.py  reviewers.py
src/ailr/core/: __init__.py  _db_admin.py  _db_calibration.py  _db_extraction.py  _db_facade.py  _db_schema.py  _db_screening.py  _db_screening_aux.py  _db_sources.py  audit.py  config.py  database.py  local_paths.py  pdf_paths.py  project.py  source.py
src/ailr/exports/: __init__.py  methods.py  prisma.py  ris.py  tables.py
src/ailr/ingest/: __init__.py  _report.py  bibtex.py  criteria_import.py  csv.py  dedup.py  pdf_link.py  results_import.py  ris.py  schema_import.py
src/ailr/llm/: __init__.py  base.py  factory.py  mock.py  retry.py
src/ailr/modes/: __init__.py  assisted.yaml  strict.yaml
src/ailr/tasks/: __init__.py  calibrate.py  extract.py  preprocess.py  screen.py
src/ailr/templates/: config.yaml.tmpl  extraction_prompt.txt.tmpl  gitignore.tmpl  inclusion_criteria.md.tmpl  schema.yaml.tmpl  screening_prompt.txt.tmpl
src/ailr/ui/: __init__.py  app.py  (+23 more)
tests/: conftest.py  test_database_smoke.py  test_ui_smoke.py
(+5 files in other folders)
